# collaborative-robotics-2026

./: .dockerignore  .gitignore  CLAUDE.md  README.md  pyproject.toml
Docker/: Dockerfile
docs/: remote_setup.md
ros2_ws/: setup_env.bash
ros2_ws/src/tidybot_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/tidybot_bringup/launch/: real.launch.py  sim.launch.py
ros2_ws/src/tidybot_bringup/scripts/: example_state_machine.py  test_arms.py  test_base.py  test_camera.py  test_grippers_real.py
ros2_ws/src/tidybot_control/: package.xml  setup.cfg  setup.py
ros2_ws/src/tidybot_control/tidybot_control/: __init__.py  arm_controller_node.py  gripper_wrapper_node.py  interbotix_arm_node.py
ros2_ws/src/tidybot_description/: CMakeLists.txt  meshes  package.xml
ros2_ws/src/tidybot_description/config/: joint_limits.yaml
ros2_ws/src/tidybot_description/launch/: robot_description.launch.py
ros2_ws/src/tidybot_description/urdf/: tidybot_wx200.urdf.xacro
ros2_ws/src/tidybot_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/tidybot_msgs/msg/: ArmCommand.msg  ArmVelocityCommand.msg
ros2_ws/src/tidybot_msgs/srv/: SolveIK.srv
ros2_ws/src/tidybot_mujoco_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/tidybot_mujoco_bridge/launch/: simulation.launch.py
ros2_ws/src/tidybot_mujoco_bridge/tidybot_mujoco_bridge/: mujoco_bridge_node.py
